--- a/ingresso-ng/package.json
+++ b/ingresso-ng/package.json
@@ -23,8 +23,11 @@
     "@fortawesome/fontawesome-free": "^5.12.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
+    "@popperjs/core": "^2.3.3",
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
+    "popper": "^1.0.1",
+    "popper.js": "1.16.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "yarn": "^1.22.0",
