--- a/ingresso-ng/package.json
+++ b/ingresso-ng/package.json
@@ -24,8 +24,10 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@popperjs/core": "^2.3.3",
+    "angularx-social-login": "^2.3.1",
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
+    "ng-recaptcha": "^5.0.0",
     "popper": "^1.0.1",
     "popper.js": "1.16.0",
     "rxjs": "~6.4.0",
